# hardware_bridge

./: .gitignore  .hgignore  99-skuba-usb.rules  CMakeLists.txt  Makefile  cmake_install.cmake  frames.gv  mainpage.dox  manifest.xml  package.xml  setup.py
calibrations/: depth_0000000000000000.yaml  depth_A00363912483109A.yaml  depth_A00363912483109A_old.yaml  external_cam.yaml  head_camera.yaml  head_camera_1280x720.yaml  kinect_extrinsics_cache.bag  logitech_cam.yaml  second_head_camera.yaml  second_kinect_extrinsics_cache.bag
include/: my_dwa.h
launch/: base_IMU_connect.launch  base_connect.launch  base_laser_connect.launch  base_laser_launch.launch  calibrate_kinect_webcam.launch  calibrate_xtion_pro_ext.launch  camera_fake_transform.launch  dynamixel_connect.launch  dynamixel_test.launch  extrinsic_calibration_external.launch  hardware_bridge.launch  intrinsic_calibration.launch  joy_connect.launch  joy_play.launch  kinect_launch.launch  kinect_to_scan.launch  laser_scan_matcher.launch  local_costmap_params.yaml  log_play.launch  mecanum_avoidance.launch  monocular_calibration.launch  my_dwa.launch  open_kinect_webcam.launch  open_webcam.launch  pose_calibration.launch  robot_connect.launch  robot_state_publisher.launch  second_neck.launch  test_arg.launch  test_board_bank.launch  tilt_laser_launch.launch  turtle_motor_connect.launch
msg/: TiltLaserCmd.msg
nodes/: SerialDataGateway.py  base_serial.py  get_transform.py  joint_state_publisher.py  joy_input.py  odometry_est.py  pan_tilt_control.py  pan_tilt_control_height.py  pan_tilt_height_control.py  (+6 more)
(+56 files in other folders)
