<?xml version="1.0"?>
<package>
  <name>hardware_bridge</name>
  <version>0.0.0</version>
  <description>The hardware_bridge package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="cerberus@todo.todo">cerberus</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>dynamixel_controllers</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversion</build_depend>
 <!-- <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend> -->
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>dynamixel_controllers</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>pcl_conversion</run_depend>
  
  <!--<run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>-->


</package>
